syntax = "proto3";

package auth;

option go_package = "github.com/danielhoward314/packet-sentry/protogen/golang/auth";

import "google/api/annotations.proto";
import "google/api/http.proto";

service AuthService {
  rpc ValidateSession (ValidateSessionRequest) returns (ValidateSessionResponse) {
    option (google.api.http) = {
      post: "/v1/session"
      body: "*"
    };
  }
  rpc Login (LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/login"
      body: "*"
    };
  }
  rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse) {
    option (google.api.http) = {
      post: "/v1/refresh"
      body: "*"
    };
  }
  rpc CreateInstallKey (CreateInstallKeyRequest) returns (CreateInstallKeyResponse) {
    option (google.api.http) = {
      post: "/v1/install-keys"
      body: "*"
    };
  }
  rpc ResetVerify (ResetVerifyRequest) returns (Empty) {
    option (google.api.http) = {
      post: "/v1/reset-verify"
      body: "*"
    };
  }
  rpc ResetPassword (ResetPasswordRequest) returns (Empty) {
    option (google.api.http) = {
      put: "/v1/passwords"
      body: "*"
    };
  }
}

message Empty {}

message ValidateSessionRequest {
  string jwt = 1;
}

message ValidateSessionResponse {
  string jwt = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string administrator_id = 1;
  string organization_id = 2;
  string administrator_name = 3;
  string organization_name = 4;
  string billing_plan = 5;
  string admin_ui_access_token = 6;
  string admin_ui_refresh_token = 7;
  string api_access_token = 8;
  string api_refresh_token = 9;
}

enum ClaimsType {
    UNSPECIFIED = 0;
    ADMIN_UI_SESSION = 1;
    API_AUTHORIZATION = 2;
}

message RefreshTokenRequest {
  string jwt = 1;
  ClaimsType claims_type = 2;
}

message RefreshTokenResponse {
  string jwt = 1;
}

message CreateInstallKeyRequest {
  string administrator_email = 1;
}

message CreateInstallKeyResponse {
  string install_key = 1;
}

message ResetVerifyRequest {
  string email = 1;
}

enum CredentialType {
    PASSWORD = 0;
    EMAIL_VERIFICATION_CODE = 1;
}

enum IdentifierType {
    ID = 0;
    EMAIL = 1;
}

message ResetPasswordRequest {
  string credential = 1;
  CredentialType credential_type = 2;
  string identifier = 3;
  IdentifierType identifier_type = 4;
  string new_password = 5;
  string confirm_new_password = 6;
}
